fix: alignement item side menu et position fixed avec affichage sur toute la hauteur

--- a/index.css
+++ b/index.css
@@ -1,9 +1,11 @@
-@import "src/app.css";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-
+@font-face {
+    font-family: EarwigFactory;
+    src: url("src/assets/font/earwig_factory_rg.ttf");
+}
 
 @layer components{
 
